Use concise list conversion